# ROS-2-Trajectory-Tracking-Path-Smoothing-for-Autonomous-Mobile-Robots

./: CMakeLists.txt  README.md  package.xml
include/trajectory_tracking/: b_spline_smoother.hpp  pure_pursuit.hpp  trajectory_generator.hpp
launch/: bringup.launch.py
rviz/: tracking.rviz
src/: b_spline_smoother.cpp  pure_pursuit.cpp  trajectory_generator.cpp  trajectory_tracker_node.cpp
test/: test_path_smoother.cpp  test_pure_pursuit.cpp  test_trajectory_generator.cpp
